@@ -3,7 +3,6 @@ package com.deliveranything.domain.order.event;
 import com.deliveranything.domain.order.entity.Order;
 import com.deliveranything.domain.order.event.dto.OrderItemInfo;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record OrderAcceptedEvent(
     String orderId,
@@ -19,11 +18,8 @@ public record OrderAcceptedEvent(
     return new OrderAcceptedEvent(
         order.getId().toString(),
         order.getOrderItems().stream()
-            .map(orderItem -> new OrderItemInfo(
-                orderItem.getProduct().getId(),
-                orderItem.getQuantity()
-            ))
-            .collect(Collectors.toList()),
+            .map(OrderItemInfo::fromOrderItem)
+            .toList(),
         order.getStore().getName(),
         order.getStore().getLocation().getX(),
         order.getStore().getLocation().getY(),
